force-app/main/default/objects/Value_Delivery_Objectives_Options__c/Value_Delivery_Objectives_Options__c.object-meta.xml
<CustomObject>
    <label>Value Delivery Objectives Options</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Value Delivery Objectives Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Delivery Objectives Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>