force-app/main/default/objects/Value_Delivery_Objectives_Options__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check activity is completed</description>
    <label>Completed ?</label>
    <type>Checkbox</type>
</CustomField>