force-app/main/default/objects/Value_Delivery_Objectives_Options__c/fields/Objectives_and_Attendees_for_Participant__c.field-meta.xml
<CustomField>
    <fullName>Objectives_and_Attendees_for_Participant__c</fullName>
    <description>Objectives And Key Participants - Record type F</description>
    <label>Objectives and Attendees for Participant</label>
    <referenceTo>Value_Delivery_Setup__c</referenceTo>
    <relationshipLabel>Value Delivery Objectives Options</relationshipLabel>
    <relationshipName>Value_Delivery_Objectives_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>