force-app/main/default/objects/Value_Delivery_Objectives_Options__c/fields/Option_Description__c.field-meta.xml
<CustomField>
    <fullName>Option_Description__c</fullName>
    <description>To Store Option Description</description>
    <label>Option Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>