force-app/main/default/objects/Value_Delivery_Objectives_Options__c/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <description>To retrieve the option in order</description>
    <label>Sequence Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>